add portal.default.lang to the mock-launch.properties

--- a/services/src/test/resources/mock-launch.properties
+++ b/services/src/test/resources/mock-launch.properties
@@ -63,6 +63,7 @@ portal.theme = theme/default
 portal.color = azure
 portal.baseUrl = http://localhost:8080
 portal.mongo.dbName = PoolDB
+portal.default.lang = en
 cacheUrl = http://localhost:8983/services/image?
 googleAnalytics.trackingCode =
 addThis.trackingCode =
