--- a/core/pom.xml
+++ b/core/pom.xml
@@ -107,6 +107,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+				<version>2.4.3</version>
                 <configuration>
                     <includes>
                         <include>**/*Spec.class</include>
