Major refactor of the theme-based mechanism. Launch.properties file has been refactored as well. A path to the delving_themes.xml external theme file is now required. Also the themed email sender is now using the PortalTheme mechanism as well

--- a/core/src/test/resources/mock-launch.properties
+++ b/core/src/test/resources/mock-launch.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2010 DELVING BV
+# Copyright 2011 DELVING BV
 #
 # Licensed under the EUPL, Version 1.1 or as soon they
 # will be approved by the European Commission - subsequent
@@ -56,6 +56,7 @@ smtp.password = password
 debug = false
 debug.freemarker = debug
 log4j.xml=classpath:log4j.xml
+portal.theme.file = ../delving_themes.xml.example
 portal.name = portal
 portal.displayName = Delving
 portal.freemarker.path = WEB-INF/templates/theme/default
