ThemeFilter using url-pattern /* to catch all

--- a/services/src/main/webapp/WEB-INF/web.xml
+++ b/services/src/main/webapp/WEB-INF/web.xml
@@ -35,7 +35,7 @@
 
     <filter-mapping>
         <filter-name>themeFilter</filter-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 
     <filter>
