update scala and scala test version to 2.9.0-1

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -233,7 +233,7 @@
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest</artifactId>
+            <artifactId>scalatest_2.9.0</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
