--- a/pom.xml
+++ b/pom.xml
@@ -243,7 +243,7 @@
             <dependency>
                 <groupId>org.mongodb</groupId>
                 <artifactId>mongo-java-driver</artifactId>
-                <version>2.4</version>
+                <version>2.5</version>
             </dependency>
 
 
@@ -388,7 +388,7 @@
 
             <dependency>
                 <groupId>org.scalatest</groupId>
-                <artifactId>scalatest</artifactId>
+                <artifactId>scalatest_2.9.0</artifactId>
                 <version>${scalaTest.version}</version>
                 <scope>test</scope>
             </dependency>
@@ -435,8 +435,8 @@
         <spring.version>3.0.5.RELEASE</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <scala.version>2.8.1</scala.version>
-        <scalaTest.version>1.3</scalaTest.version>
+        <scala.version>2.9.0-1</scala.version>
+        <scalaTest.version>1.6.1</scalaTest.version>
     </properties>
 
 </project>
