Simple test for resizing

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -250,6 +250,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.8.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.thebuzzmedia</groupId>
             <artifactId>imgscalr-lib</artifactId>
             <version>3.1</version>
