--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.0</version>
+                <version>2.0.1</version>
             </dependency>
             <dependency>
                 <!--two different http clients-->
@@ -243,7 +243,7 @@
             <dependency>
                 <groupId>org.mongodb</groupId>
                 <artifactId>mongo-java-driver</artifactId>
-                <version>2.5</version>
+                <version>2.6.5</version>
             </dependency>
 
 
@@ -430,7 +430,7 @@
         <spring.version>3.0.5.RELEASE</spring.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <scala.version>2.9.0-1</scala.version>
+        <scala.version>2.9.1</scala.version>
         <scalaTest.version>1.6.1</scalaTest.version>
     </properties>
 
